# IPL-Win-Prediction-Model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_UPLOAD_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github /ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github /workflows/: ci-cd.yml
models/: .gitkeep
monitoring/: prometheus.yml
nginx/: nginx.conf
notebooks/: 01_EDA.py  02_Feature_Analysis.py  03_Model_Experiments.py  04_SHAP_Analysis.py
scripts/: download_data.py
src/: __init__.py
src /api/: main.py
src /features/: feature_engineering.py
src /models/: train_model.py
src /utils/: helpers.py
streamlit_app/: app.py
tests/: test_full_pipeline.py
